# timesync

./: .README.html  .ansible-lint  .codespellrc  .gitignore  .pre-commit-config.yaml  .sanity-ansible-ignore-2.12.txt  .sanity-ansible-ignore-2.13.txt  .sanity-ansible-ignore-2.14.txt  .sanity-ansible-ignore-2.15.txt  .sanity-ansible-ignore-2.17.txt  .sanity-ansible-ignore-2.9.txt  .travis.yml  .yamllint_custom.yml  CHANGELOG.md  COPYING  README.md  ansible.cfg  contributing.md  pyproject.toml  requirements.yml  tox.ini
.ostree/: packages-runtime.txt  packages-testing.txt
.travis/: config.sh  custom.sh  runblack.sh  runcoveralls.sh  runflake8.sh  runpylint.sh  runpytest.sh  runsyspycmd.sh  utils.sh
defaults/: main.yml
docs/: index.html
examples/: multiple-ntp-servers.yml  single-pool.yml
handlers/: main.yml
latest/: README.html
meta/: collection-requirements.yml  main.yml
plans/: README-plans.md  general.fmf  test_playbooks_parallel.fmf
tasks/: disable_service.yml  enable_service.yml  generate_conf_file.yml  install_pkg.yml  main.yml  ntp.yml  ptp.yml  set_vars.yml
templates/: chrony.conf.j2  chronyd.sysconfig.j2  ntp.conf.j2  ntpd.sysconfig.j2  phc2sys.sysconfig.j2  ptp4l.conf.j2  ptp4l.sysconfig.j2  timemaster.conf.j2
test/: test_default.yml  test_ntp.yml  test_ntp_ptp.yml  test_ptp_multi.yml  test_ptp_single.yml
tests/: _after_test.yml  _after_test_suite.yml  _before_test_suite.yml  inventory.yaml.j2  inventory.yml.j2  provision.fmf  requirements.yml  restore_services_state.yml  role_wrapper.yml  setup-snapshot.yml  tests_chrony.yml  tests_ntp.yml  (+23 more)
(+57 files in other folders)
